# ekantipur-scraper

./: .gitignore  README.md  main.py  output.json  prompts.txt  pyproject.toml  scraper.py
.github/workflows/: scraper.yml
src/ekantipur_scraper/: config.py  models.py  scraper.py
tests/: test_scraper.py
